kratos/external_libraries/gidpost/source/gidpost.h



typedef unsigned int GiD_FILE;


/*
 *  Write a coordinate member at the current Coordinates Block 
 */

GIDPOST_API
int GiD_WriteCoordinates(int id, double x, double y, double z);


GIDPOST_API
int GiD_fWriteCoordinates(GiD_FILE fd, int id, double x, double y, double z);


/*
 *  Write an element member at the current Elements Block. The rest of
 *  the arguments define the connectivity of the element and its
 *  number depends on the NNode parameter given in the previous call
 *  to BeginPostMesh. The last id correspond to a material number.
 *  
 */

GIDPOST_API
int GiD_WriteElementMat(int id, int nid[]);


GIDPOST_API
int GiD_fWriteElementMat(GiD_FILE fd, int id, int nid[]);



/*
 *  This function is not needed anymore. Mark the starting point for
 *  writing the values of the current result either single or group.
 */

GIDPOST_API
int GiD_ResultValues();


GIDPOST_API
int GiD_fResultValues(GiD_FILE fd);


/*
 *  Close a previously opened result either single or group.
 */

GIDPOST_API
int GiD_EndResult();


GIDPOST_API
int GiD_fEndResult(GiD_FILE fd);


/*
 * Results which are referred to a mesh group (see GiD_BeginMeshGroup)
 * should be written between a call to this function and
 * GiD_EndOnMeshGroup.
 */

GIDPOST_API
int GiD_BeginOnMeshGroup(char * Name);


GIDPOST_API
int GiD_fBeginOnMeshGroup(GiD_FILE fd, char * Name);


/*
 * This function close a previously opened block of result over a mesh
 * group.
 */

GIDPOST_API
int GiD_EndOnMeshGroup();


GIDPOST_API
int GiD_fEndOnMeshGroup(GiD_FILE fd);


/*
 *  Flushes all pending output into the postprocess file. This
 *  function should be called only when strictly necessary when
 *  writing in GiD_PostAsciiZipped * or GiD_PostBinary modes because
 *  it can degrade compression.
 */

GIDPOST_API
int GiD_FlushPostFile();


GIDPOST_API
int GiD_fFlushPostFile(GiD_FILE fd);


/*
 *  Write result functions
 */

GIDPOST_API
int GiD_WriteScalar(int id, double v);


GIDPOST_API
int GiD_fWriteScalar(GiD_FILE fd, int id, double v);


GIDPOST_API
int GiD_Write2DVector(int id, double x, double y);


GIDPOST_API
int GiD_fWrite2DVector(GiD_FILE fd, int id, double x, double y);


GIDPOST_API
int GiD_WriteVector(int id, double x, double y, double z);


GIDPOST_API
int GiD_fWriteVector(GiD_FILE fd, int id, double x, double y, double z);


GIDPOST_API
int GiD_WriteVectorModule(int id, double x, double y, double z, double mod);


GIDPOST_API
int GiD_fWriteVectorModule(GiD_FILE fd, int id,
		           double x, double y, double z, double mod);


GIDPOST_API
int GiD_Write2DMatrix(int id, double Sxx, double Syy, double Sxy);


GIDPOST_API
int GiD_fWrite2DMatrix(GiD_FILE fd, int id, double Sxx, double Syy, double Sxy);


GIDPOST_API
int GiD_Write3DMatrix(int id, double Sxx, double Syy, double Szz,
		      double Sxy, double Syz, double Sxz);


GIDPOST_API
int GiD_fWrite3DMatrix(GiD_FILE fd, int id, double Sxx, double Syy, double Szz,
		       double Sxy, double Syz, double Sxz);


GIDPOST_API
int GiD_WritePlainDefMatrix(int id, double Sxx, double Syy, double Sxy,
		            double Szz);


GIDPOST_API
int GiD_fWritePlainDefMatrix(GiD_FILE fd, int id,
		             double Sxx, double Syy, double Sxy, double Szz);


GIDPOST_API
int GiD_WriteMainMatrix(int id,
		        double Si, double Sii, double Siii,
		        double Vix, double Viy, double Viz,
		        double Viix, double Viiy, double Viiz,
		        double Viiix, double Viiiy, double Viiiz);

  
GIDPOST_API
int GiD_fWriteMainMatrix(GiD_FILE fd, int id,
		         double Si, double Sii, double Siii,
		         double Vix, double Viy, double Viz,
		         double Viix, double Viiy, double Viiz,
		         double Viiix, double Viiiy, double Viiiz);

  
GIDPOST_API
int GiD_WriteLocalAxes(int id, double euler_1, double euler_2, double euler_3);


GIDPOST_API
int GiD_fWriteLocalAxes(GiD_FILE fd, int id,
		        double euler_1, double euler_2, double euler_3);


GIDPOST_API
int GiD_WriteComplexScalar( int id, double complex_real, double complex_imag);


GIDPOST_API
int GiD_fWriteComplexScalar( GiD_FILE fd, int id, double complex_real, double complex_imag);


GIDPOST_API
int GiD_WriteComplexVector( int id,
                            double x_real, double x_imag,
                            double y_real, double y_imag,
                            double z_real, double z_imag);


GIDPOST_API
int GiD_fWriteComplexVector( GiD_FILE fd, int id,
                             double x_real, double x_imag,
                             double y_real, double y_imag,
                             double z_real, double z_imag);