external_libraries/gidpost/fortran_module/gidpost_interface.f90


    SUBROUTINE GiD_ResultValues() BIND(C,NAME='GiD_ResultValues')
    END SUBROUTINE GiD_ResultValues
    SUBROUTINE GiD_fResultValues(fd) BIND(C,NAME='GiD_fResultValues')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fResultValues

    SUBROUTINE GiD_EndResult() BIND(C,NAME='GiD_EndResult')
    END SUBROUTINE GiD_EndResult
    SUBROUTINE GiD_fEndResult(fd) BIND(C,NAME='GiD_fEndResult')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fEndResult

    !SUBROUTINE GiD_BeginOnMeshGroup -> REDEFINED
    !SUBROUTINE GiD_fBeginOnMeshGroup -> REDEFINED

    SUBROUTINE GiD_EndOnMeshGroup() BIND(C,NAME='GiD_EndOnMeshGroup')
    END SUBROUTINE GiD_EndOnMeshGroup
    SUBROUTINE GiD_fEndOnMeshGroup(fd) BIND(C,NAME='GiD_fEndOnMeshGroup')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fEndOnMeshGroup

    SUBROUTINE GiD_FlushPostFile() BIND(C,NAME='GiD_FlushPostFile')
    END SUBROUTINE GiD_FlushPostFile
    SUBROUTINE GiD_fFlushPostFile(fd) BIND(C,NAME='GiD_fFlushPostFile')
      IMPORT :: GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
    END SUBROUTINE GiD_fFlushPostFile

    SUBROUTINE GiD_WriteScalar(id,v) BIND(C,NAME='GiD_WriteScalar')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: v
    END SUBROUTINE GiD_WriteScalar
    SUBROUTINE GiD_fWriteScalar(fd,id,v) BIND(C,NAME='GiD_fWriteScalar')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: v
    END SUBROUTINE GiD_fWriteScalar

    SUBROUTINE GiD_Write2DVector(id,x,y) BIND(C,NAME='GiD_Write2DVector')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x, y
    END SUBROUTINE GiD_Write2DVector
    SUBROUTINE GiD_fWrite2DVector(fd,id,x,y) BIND(C,NAME='GiD_fWrite2DVector')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x, y
    END SUBROUTINE GiD_fWrite2DVector

    ! SUBROUTINE GiD_WriteVector -> SPECIAL INTERFACE
    ! SUBROUTINE GiD_fWriteVector -> SPECIAL INTERFACE

    ! SUBROUTINE GiD_WriteVectorModule -> SPECIAL INTERFACE
    ! SUBROUTINE GiD_fWriteVectorModule -> SPECIAL INTERFACE

    SUBROUTINE GiD_Write2DMatrix(id,Sxx,Syy,Sxy) BIND(C,NAME='GiD_Write2DMatrix')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Sxx,Syy,Sxy
    END SUBROUTINE GiD_Write2DMatrix
    SUBROUTINE GiD_fWrite2DMatrix(fd,id,Sxx,Syy,Sxy) BIND(C,NAME='GiD_fWrite2DMatrix')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Sxx,Syy,Sxy
    END SUBROUTINE GiD_fWrite2DMatrix

    SUBROUTINE GiD_Write3DMatrix(id,Sxx,Syy,Szz,Sxy,Syz,Sxz) BIND(C,NAME='GiD_Write3DMatrix')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Sxx,Syy,Szz,Sxy,Syz,Sxz
    END SUBROUTINE GiD_Write3DMatrix
    SUBROUTINE GiD_fWrite3DMatrix(fd,id,Sxx,Syy,Szz,Sxy,Syz,Sxz) BIND(C,NAME='GiD_fWrite3DMatrix')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Sxx,Syy,Szz,Sxy,Syz,Sxz
    END SUBROUTINE GiD_fWrite3DMatrix

    SUBROUTINE GiD_WritePlainDefMatrix(id,Sxx,Syy,Sxy,Szz) BIND(C,NAME='GiD_WritePlainDefMatrix')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Sxx,Syy,Sxy,Szz
    END SUBROUTINE GiD_WritePlainDefMatrix
    SUBROUTINE GiD_fWritePlainDefMatrix(fd,id,Sxx,Syy,Sxy,Szz) BIND(C,NAME='GiD_fWritePlainDefMatrix')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Sxx,Syy,Sxy,Szz
    END SUBROUTINE GiD_fWritePlainDefMatrix

    SUBROUTINE GiD_WriteMainMatrix(id,Si,Sii,Siii,Vix,Viy,Viz,Viix,Viiy,Viiz,Viiix,Viiiy,Viiiz) BIND(C,NAME='GiD_WriteMainMatrix')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Si,Sii,Siii,Vix,Viy,Viz,Viix,Viiy,Viiz,Viiix,Viiiy,Viiiz
    END SUBROUTINE GiD_WriteMainMatrix
    SUBROUTINE GiD_fWriteMainMatrix(fd,id,Si,Sii,Siii,Vix,Viy,Viz,Viix,Viiy,Viiz,Viiix,Viiiy,Viiiz) &
      BIND(C,NAME='GiD_fWriteMainMatrix')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Si,Sii,Siii,Vix,Viy,Viz,Viix,Viiy,Viiz,Viiix,Viiiy,Viiiz
    END SUBROUTINE GiD_fWriteMainMatrix

    SUBROUTINE GiD_WriteLocalAxes(id,euler_1,euler_2,euler_3) BIND(C,NAME='GiD_WriteLocalAxes')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: euler_1,euler_2,euler_3
    END SUBROUTINE GiD_WriteLocalAxes
    SUBROUTINE GiD_fWriteLocalAxes(fd,id,euler_1,euler_2,euler_3) BIND(C,NAME='GiD_fWriteLocalAxes')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: euler_1,euler_2,euler_3
    END SUBROUTINE GiD_fWriteLocalAxes
    
    SUBROUTINE GiD_WriteComplexScalar(id,Re,Im) BIND(C,NAME='GiD_WriteComplexScalar')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Re,Im
    END SUBROUTINE GiD_WriteComplexScalar
    SUBROUTINE GiD_fWriteComplexScalar(fd,id,Re,Im) BIND(C,NAME='GiD_fWriteComplexScalar')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Re, Im
    END SUBROUTINE GiD_fWriteComplexScalar
    
    SUBROUTINE GiD_WriteComplexVector(id,Rex,Imx,Rey,Imy,Rez,Imz) BIND(C,NAME='GiD_WriteComplexVector')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Rex,Imx,Rey,Imy,Rez,Imz
    END SUBROUTINE GiD_WriteComplexVector
    SUBROUTINE GiD_fWriteComplexVector(fd,id,Rex,Imx,Rey,Imy,Rez,Imz) BIND(C,NAME='GiD_fWriteComplexVector')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: Rex,Imx,Rey,Imy,Rez,Imz
    END SUBROUTINE GiD_fWriteComplexVector

  END INTERFACE

!--------------------------------------------------------------------------
! SPECIAL INTERFACES
!--------------------------------------------------------------------------
  
  INTERFACE GiD_WriteCoordinates
    MODULE PROCEDURE GiD_WriteCoordinates_f
    SUBROUTINE GiD_WriteCoordinates_cpp(id,x,y,z) BIND(C,NAME='GiD_WriteCoordinates')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y,z
    END SUBROUTINE GiD_WriteCoordinates_cpp
  END INTERFACE
  INTERFACE GiD_fWriteCoordinates
    MODULE PROCEDURE GiD_fWriteCoordinates_f
    SUBROUTINE GiD_fWriteCoordinates_cpp(fd,id,x,y,z) BIND(C,NAME='GiD_fWriteCoordinates')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y,z
    END SUBROUTINE GiD_fWriteCoordinates_cpp
  END INTERFACE

  INTERFACE GiD_WriteElementMat
    MODULE PROCEDURE GiD_WriteElementMat_f
    SUBROUTINE GiD_WriteElementMat_cpp(id,conec) BIND(C,NAME='GiD_WriteElementMat')
      IMPORT :: C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT),        INTENT(IN) :: conec(*)
    END SUBROUTINE GiD_WriteElementMat_cpp
  END INTERFACE
  INTERFACE GiD_fWriteElementMat
    MODULE PROCEDURE GiD_fWriteElementMat_f
    SUBROUTINE GiD_fWriteElementMat_cpp(fd,id,conec) BIND(C,NAME='GiD_fWriteElementMat')
      IMPORT :: C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      INTEGER(C_INT),        INTENT(IN) :: conec(*)
    END SUBROUTINE GiD_fWriteElementMat_cpp
  END INTERFACE

  INTERFACE GiD_WriteVector
    MODULE PROCEDURE GiD_WriteVector_f
    SUBROUTINE GiD_WriteVector_cpp(id,x,y,z) BIND(C,NAME='GiD_WriteVector')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y,z
    END SUBROUTINE GiD_WriteVector_cpp
  END INTERFACE
  INTERFACE GiD_fWriteVector
    MODULE PROCEDURE GiD_fWriteVector_f
    SUBROUTINE GiD_fWriteVector_cpp(fd,id,x,y,z) BIND(C,NAME='GiD_fWriteVector')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y,z
    END SUBROUTINE GiD_fWriteVector_cpp
  END INTERFACE

  INTERFACE GiD_WriteVectorModule
    MODULE PROCEDURE GiD_WriteVectorModule_f
    SUBROUTINE GiD_WriteVectorModule_cpp(id,x,y,z,mod) BIND(C,NAME='GiD_WriteVectorModule')
      IMPORT :: C_DOUBLE, C_INT
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y,z,mod
    END SUBROUTINE GiD_WriteVectorModule_cpp
  END INTERFACE
  INTERFACE GiD_fWriteVectorModule
    MODULE PROCEDURE GiD_fWriteVectorModule_f
    SUBROUTINE GiD_fWriteVectorModule_cpp(fd,id,x,y,z,mod) BIND(C,NAME='GiD_fWriteVectorModule')
      IMPORT :: C_DOUBLE, C_INT, GiD_File
      TYPE(GiD_File), VALUE, INTENT(IN) :: fd
      INTEGER(C_INT), VALUE, INTENT(IN) :: id
      REAL(C_DOUBLE), VALUE, INTENT(IN) :: x,y,z,mod
    END SUBROUTINE GiD_fWriteVectorModule_cpp
  END INTERFACE

  INTERFACE OPERATOR(==)
    MODULE PROCEDURE GiD_PostMode_Equal
  END INTERFACE

  !INTERFACE ASSIGNMENT(=)
  !  MODULE PROCEDURE Copy_GiD_File
  !END INTERFACE
  !PUBLIC :: ASSIGNMENT(=)

! AUXILIAR INTERFACES
  INTERFACE GiD_Int
    MODULE PROCEDURE GiD_Int_1
    MODULE PROCEDURE GiD_Int_2
    MODULE PROCEDURE GiD_Int_4
    MODULE PROCEDURE GiD_Int_8
  END INTERFACE
  
  INTERFACE GiD_Real
    MODULE PROCEDURE GiD_Real_4
    MODULE PROCEDURE GiD_Real_8
  END INTERFACE


!--------------------------------------------------------------------------
! PUBLIC ROUTINES
!--------------------------------------------------------------------------
